style2.0.1.css
@font-face {
    font-family: montserrat;
    src: url(./fonts/Montserrat-VariableFont_wght.ttf);
}
:root {
    font-size: 10px;
}
body {
    display: flex;
    flex-direction: column;
    width: 100%;
    min-height: 100vh;
    background-image: url("./img/white-concrete-wall.jpg");
    justify-content: space-between;
    font-family: montserrat, sans-serif;
}

@keyframes aparecer {
    0% {opacity: 1;}
    25% {opacity: 0.5}
    50% {opacity: 0.2}
    75% {opacity: 0.5}
    100% {opacity: 1}
}
@keyframes imageshadow {
  to {box-shadow: 0;}
  to {box-shadow: 0 0 1rem 1rem rgb(32, 161, 161);}
}
/* =================================================================*/
                        /* Menu Styles */
/* =================================================================*/
.collapsable {
    display: flex;
    flex-direction: column;
    background: none;
    position: sticky;
    
}
.hamburguer {
    stroke: #000;
    margin: 1rem 0 1rem 1rem;

}
.options {
    display: none;
    flex-direction: column;
    justify-content:center;
    align-items: center;
    padding: 1rem 0;
    box-sizing: border-box;
    transform: translateY(-5vh)
}

.sections__menu{

    padding: 1rem;
}
.sections__iten{
    margin: 0.2rem 1rem;
    text-align:center;
    font-size:2rem;
    font-weight:700;
}
.icon__links{
    display: grid;
    grid-auto-flow: column;
    gap: 3rem;
}
.social__media{
    margin: 0.2rem 0.5rem
}
.link__nav{
    text-decoration: none;
    color: #000000;

}


/* ==========================*/
/*   Menu closed styles  */
/* ==========================*/


/* ==========================*/
/*   Menu open styles     */
/* ==========================*/



/* =================================================================*/
                        /* main content */
/* =================================================================*/


.sections {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 2rem 0;
    flex-direction: column;
}
.quem-sou, .projetos, .contato{
    display: none;
}
.text {
    text-align: center;
    width: 100%;
    font-family: montserrat;
    /*padding: 1rem 0;*/
}
.text__titulo {
    padding: 1rem 0;
    font-size: 3rem;
    font-weight: 700;
}
.text__texto, .about__me{
    padding: 2rem 0;
    font-size:1.8rem;
    font-weight: 500;
    width: min(80%, 60ch);
    margin: 0 auto;
}
.text__texto strong {
    font-weight: 900;
    color: rgb(134, 29, 29);
}
.img {
    display: flex;
    align-items: center;
    justify-content: center;

}
.profile-pic{
    box-shadow: 0 0 0.6rem 0.6rem rgb(32, 161, 161);
    width: min(70%, 30rem);
}

.quem-sou{
    flex-direction: column;
    text-align: center;
}
.titulo__stacks{
    font-size: 2.4rem;
    font-weight: 700;
    padding: 1rem;
    margin: 2rem;
}
.stacks__su{
    font-size: 1.8rem;
    font-weight: 700;
    margin-top: 2rem;
}

.stacks__icons{
    display:grid;
    grid-template-columns: 1fr 1fr 1fr;
}
.colored:hover{
    text-shadow: 0 0 2rem rgba(161, 216, 129, 0.8);
}
.colored{
    font-size: 7rem;
    margin: 1rem;
    padding: 0.5rem 1rem;
}
.project{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: min(80%, 60ch);
    text-align: center;
    justify-content:center;
}
.project__title{
    font-size: 3rem;
    font-weight: 700;
    padding: 1rem;
    margin: 2rem;
}
.project__description{
    font-size: 1.8rem;
    font-weight: 500;
    line-height: 2.5rem;
    margin-top: 2rem;
}
.project__description strong{
    font-weight: 900;
    color: rgb(134, 29, 29);
}
.link__project{
    text-decoration: none;
    font-weight: 900;
    padding-bottom: 1rem;
    font-size: 2rem;
    color: rgb(29, 130, 134);
}
.project__img{
    width: min(70%, 30rem);
}
#contact-form{
    display: flex;
    flex-direction: column;
    margin: 2rem;
    flex-wrap: wrap;
    font-size: 2rem;
}
.alternate__contact{
    display: flex;
    flex-direction: column;
    margin: 2rem;
    flex-wrap: wrap;
    font-size: 2rem;
}
.contact__title{
    font-size: 2.4rem;
    font-weight: 700;
    padding: 1rem;
    margin: 2rem;
}
.informacoes{
    display: grid;
    grid-template-columns: 1fr 1fr;
}
label, input{
    margin: 1.5rem 0.5rem;

}
.perguntas{
    font-weight: 700;
    margin: 1rem;
}
.fa{
    font-size: 4rem;
}
.fa-whatsapp{
    color: green;
}
.alternate__contact__info{
    display:grid;
    grid-template-columns: 1fr 2fr;
    align-items:center;
}
.contato__info{
    font-size: 1.8rem;
    font-weight: 700;
}
.enviar{
    width: min(40rem, 40%);
    align-self: center;
}
.enviar:hover{
    background: rgba(129, 174, 216, 0.2);
    box-shadow: 0 0 1.5rem rgba(148, 129, 216, 0.4);;
}

/* Rodape */
.rodape {
    position: relative;
    bottom: 0;
    width: 100%;
    background-image: url("./img/bg.jpg");
}
.rodape__menu {
    display: flex;
    justify-content:center;
    flex-wrap: wrap;


}
.no-rodape{
    color: #fff;
    font-size: 1.5rem;
    padding: 0.2rem;
}
.copyright{
    color: #fff;
    font-size: 1.2rem;
    text-align: center;
}
@media (min-width: 640px){
    body {

    }
    .collapsable {
        display: flex;
        flex-direction: row;
        width: 100%;
        justify-content: space-between;
        background: none;
        position: sticky;
        
    }
    .hamburguer {
        display:none;
    
    }
    .options {
        display: flex;
        width: 100%;
        flex-direction: row;
        justify-content:center;
        align-items: center;
        transform: translateY(0);
    }
    .sections__menu{
        display: flex;
    }
    .principal {
        justify-self: flex-start;
    }
    .sections{
        grid-auto-flow: column;
        grid-auto-columns: 1fr;
        align-items: flex-start;
        

      
    }
    .home {
        display: grid;
    }
    .sections__iten:hover{
        text-shadow: 0 0 0.3rem rgb(13, 70, 70);
        cursor: pointer;
    }
    .social__media:hover {
        filter: drop-shadow(0 0 0.3rem rgb(13, 70, 70));
    }
    .profile-pic:hover {
        animation-name: imageshadow;
        animation-duration: 2s;
        box-shadow: 0 0 1rem 1rem rgb(32, 161, 161);
    }
    .text {
        display:flex;
        flex-direction: column;
        justify-content: flex-end;
        align-items: flex-end;
    }
    .text__titulo{
        font-size: clamp(2.8rem, -0.083rem + 8vw, 4.5rem);
        margin: 0;
    }
    .text__texto{
        font-size: clamp(1.6rem, -0.085rem + 8vw, 2.8rem);
        text-align: right;
    }
}

